fix(Modal): fix vertical content alignment and story

--- a/packages/react-components/src/components/modal/content/modal-content.module.css
+++ b/packages/react-components/src/components/modal/content/modal-content.module.css
@@ -13,7 +13,8 @@
     -webkit-overflow-scrolling: touch;
 
     &[data-center-vertically='true'] {
-      margin: auto;
+      margin-top: auto;
+      margin-bottom: auto;
     }
 
     @media (--from-small) {
